# palette

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-frontend  Dockerfile-server  README.md  compose.yaml
.github/workflows/: docker-build.yml  frontend-build.yml  rust.yml  server-api.yml  server-build.yml  server.yml
frontend/: .eslintrc  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/Navbar/: index.tsx
frontend/src/components/Upload/: index.tsx
frontend/src/utils/aws/: index.ts
frontend/src/utils/types/: aws.types.ts  palette.types.ts
frontend/src/utils/uploadFile/: index.ts
proto/: palette.proto
server/: Cargo.toml  build.rs
server/src/: main.rs  server.rs
src/: main.rs  palette.rs
